<resources>
    <string name="app_name">Ojasa</string>

    <!-- Facebook Application ID -->
    <string name="app_id">947420882011426</string>

    <string name="label_login">LOGIN</string>
    <string name="label_login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="label_login_with_email">LOGIN WITH EMAIL</string>
    <string name="label_register">REGISTER</string>
    <string name="label_copyright">COPYRIGHT OJASA 2015</string>
    <string name="label_email">EMAIL</string>
    <string name="label_password">PASSWORD</string>
    <string name="label_forgot_password">FORGOT PASSWORD</string>
    <string name="label_enter_code">ENTER CODE</string>
    <string name="label_input_code">Input the code that has been sent to your mobile number</string>
    <string name="label_verify">VERIFY</string>
    <string name="label_skip">SKIP</string>
    <string name="label_enter_email_address">ENTER YOUR EMAIL ADDRESS</string>
    <string name="label_phone_number">PHONE NUMBER</string>
    <string name="label_click_here"><u>click here</u></string>
    <string name="label_full_name">FULL NAME</string>
    <string name="label_birth_date">BIRTH DATE</string>
    <string name="label_term_privacy_1">By registering, I agree to</string>
    <string name="label_send_code">SEND THE CODE</string>
    <string name="label_send">SEND</string>
    <string name="label_term_privacy_2">OJASA\'s <u>Terms of Service</u> &amp; <u>Privacy Policy</u></string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
