<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/form_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/form_border"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input_full_name"
            android:hint="@string/label_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_full_name"
        android:background="@drawable/form_border"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input_email"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_email"
        android:background="@drawable/form_border"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input_password"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_password"
        android:background="@drawable/form_border"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input_birth_date"
            android:hint="@string/label_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:inputType="datetime" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_below="@id/form_birth_date"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/text_term_service_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="10sp"
            android:text="@string/label_term_privacy_1"/>
        <TextView
            android:id="@+id/text_term_service_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="10sp"
            android:layout_below="@+id/text_term_service_1"
            android:text="@string/label_term_privacy_2"/>
    </RelativeLayout>

</RelativeLayout>