<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/form_number_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/form_border"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input_number_verification_code"
            android:hint="@string/label_enter_code"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="10sp"
        android:text="@string/label_input_code"/>

    <Button
        android:id="@+id/button_verify"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_verify"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="Please"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text=" "/>
        <TextView
            android:id="@+id/text_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/label_click_here"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text=" "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="if you have not received the code"/>
    </LinearLayout>

</LinearLayout>