<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActMain">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/button_facebook_login"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/com_facebook_blue"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/facebook_login_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_alert"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/facebook_login_icon"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/label_login_with_facebook"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_email_login"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_login_with_email"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@id/button_facebook_login"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/layout_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_email_login"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="or" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/darker_gray"
            android:layout_weight="2"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_register"
        android:textColor="@android:color/white"
        android:layout_below="@id/layout_separator"
        android:textSize="18sp"
        android:background="@android:color/holo_blue_light"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_copyright"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/secondary_text_dark_nodisable"/>

</RelativeLayout>
